fix: grid gap

--- a/styles/movie-videos.module.css
+++ b/styles/movie-videos.module.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  gap: 50px;
   margin-top: 100px;
   padding-bottom: 100px;
 }
